Fix dark mode styles not applying on some browsers

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 
+@tailwind base;
+
+@layer base {
+  body {
+    @apply text-black dark:text-gray-100;
+  }
+}
+
 .desc {
   @apply text-yellow-500 hover:text-yellow-400 transition;
 }
